# dory

./: CHANGELOG.md  Cargo.toml  README.md  ZK_IMPLEMENTATION_AUDIT.md  dory_paper_reference.md  dory_zk_analysis.md  goal.md  rustfmt.toml  zk.md  zk_refactor_plan.md
.github/workflows/: ci.yml
benches/: arkworks_proof.rs
derive/: Cargo.toml
examples/: basic_e2e.rs  homomorphic.rs  homomorphic_mixed_sizes.rs  non_square.rs  zk_e2e.rs  zk_statistical.rs
src/: error.rs  evaluation_proof.rs  lib.rs  messages.rs  mode.rs  proof.rs  reduce_and_fold.rs  setup.rs
src/backends/arkworks/: ark_cache.rs  ark_field.rs  ark_group.rs  ark_pairing.rs  ark_poly.rs  ark_serde.rs  ark_setup.rs  blake2b_transcript.rs  domain.rs  mod.rs  spongefish_codecs.rs
src/primitives/: arithmetic.rs  poly.rs  transcript.rs
tests/arkworks/: cache.rs  commitment.rs  evaluation.rs  homomorphic.rs  integration.rs  mod.rs  non_square.rs  serialization.rs  setup.rs  soundness.rs  zk.rs  zk_statistical.rs
