[package]
name = "dory-derive"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
authors = ["Markos Georghiades <mgeorghiades@a16z.com>"]
license = "Apache-2.0 OR MIT"
description = "Procedural macros for the Dory polynomial commitment scheme"
repository = "https://github.com/a16z/dory"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
